# jupyter-ldap-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  test-cmd.txt
jupyter_ldap_sync/: __init__.py  __main__.py
